联系人列表 分组 定位

--- a/WX/src/main/res/layout/fragment_contactlist.xml
+++ b/WX/src/main/res/layout/fragment_contactlist.xml
@@ -1,20 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#EBEBEB">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#EBEBEB">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            >
 
-        </ListView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                />
+
+            <com.wx.app.widget.Sidebar
+                android:id="@+id/sidebar"
+                android:layout_width="25dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+
+                />
+
+            <TextView
+                android:id="@+id/floating_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:textSize="40sp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/show_head_toast_bg"
+                android:visibility="invisible"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                />
+        </RelativeLayout>
     </FrameLayout>
 
 </LinearLayout>
