--- a/WX/src/main/res/layout/item_contact_list.xml
+++ b/WX/src/main/res/layout/item_contact_list.xml
@@ -13,6 +13,7 @@
         android:paddingLeft="12dp"
         android:textColor="#888888"
         android:textSize="14sp"
+        android:text="#"
          />
 
     <View
@@ -22,6 +23,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:background="#d9d9d9"
+        android:visibility="gone"
          />
 
     <RelativeLayout
