--- a/WX/src/main/res/layout/item_contact_list_header.xml
+++ b/WX/src/main/res/layout/item_contact_list_header.xml
@@ -44,7 +44,7 @@
             android:text="1"
             android:textColor="#ffffff"
             android:textSize="12sp"
-            android:visibility="gone" />
+            android:visibility="visible" />
     </RelativeLayout>
 
     <View
