--- a/WX/src/main/res/values/colors.xml
+++ b/WX/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
 	<color name="tab_text_normal">#FF999999</color>
 	<color name="error_item_color">#F6EBE6</color>
 	<color name="common_bg">#fcfcfc</color>
+
+	<color name="btn_gray_normal">#c0c0c0</color>
+	<color name="btn_gray_pressed_status">#b5b5b6</color>
+	<color name="btn_gray_pressed">#666667</color>
 </resources>
